# p0l

./: README.md  TODO.md
example/lagrange/: CMakeLists.txt  main.cpp
example/lagrange_mesh/: CMakeLists.txt  main.cpp
example/mesh/: CMakeLists.txt  main.cpp
example/polynome/: CMakeLists.txt  main.cpp
example/v0l/: CMakeLists.txt  main.cpp
include/p0l/: interpolation.h  lagrange.h  polynome.h  to_string.h
